<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
    <name>rm_msgs</name>
    <version>0.1.20</version>
    <description>The rm_msgs package provides all the messages for all kind of robot</description>
    <maintainer email="liaoqiayuan@gmail.com">qiayuan</maintainer>
    <license>BSD</license>

    <buildtool_depend>ament_cmake</buildtool_depend>

    <depend>rosidl_default_generators</depend>
    <depend>std_msgs</depend>
    <depend>geometry_msgs</depend>
    <depend>action_msgs</depend>
    <depend>builtin_interfaces</depend>

    <exec_depend>rosidl_default_runtime</exec_depend>

    <member_of_group>rosidl_interface_packages</member_of_group>

    <export>
        <build_type>ament_cmake</build_type>
    </export>
</package>
